# IYTFamily

./: ARCHITECTURE_PLAN.md  REQUIREMENTS_ANALYSIS.md
backend/: .env  iytfamily.db  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  clients.py  dependencies.py  documents.py  flights.py  locations.py  messages.py  notifications.py  trips.py  users.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  client.py  document.py  emergency_alert.py  flight_info.py  geofence.py  location_update.py  message.py  notification.py  trip.py  user.py  wellness_checkin.py
backend/app/schemas/: __init__.py  auth.py  client.py  document.py  flight_info.py  location_update.py  message.py  notification.py  trip.py  user.py
backend/app/services/: notification_service.py
backend/app/utils/: encryption.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/map/: LiveMap.tsx
frontend/src/components/pages/: ClientManagementPage.tsx  DocumentUploadPage.tsx  FlightManagementPage.tsx  MessagingPage.tsx  SettingsPage.tsx  TripCreationPage.tsx  UserManagementPage.tsx
frontend/src/services/: api.ts
