[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.14"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.41"
alembic = "^1.16.2"
python-socketio = "^5.13.0"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"
redis = "^6.2.0"
cryptography = "^45.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
